[gd_scene load_steps=2 format=3 uid="uid://bxwu25xldpa11"]

[ext_resource type="Script" path="res://bar.gd" id="1_ugypt"]

[node name="bar" type="Node2D"]
script = ExtResource("1_ugypt")

[node name="bar_graphic" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = 1072.0
offset_right = 652.0
offset_bottom = 1156.0
color = Color(0.196143, 0.196143, 0.196143, 1)

[node name="store" type="Button" parent="."]
offset_left = 490.0
offset_top = 1082.0
offset_right = 608.0
offset_bottom = 1143.0
text = "Store"

[node name="leaderboard" type="Button" parent="."]
offset_left = 341.0
offset_top = 1082.0
offset_right = 459.0
offset_bottom = 1143.0
text = "Leaderboard"

[node name="timer" type="Button" parent="."]
offset_left = 189.0
offset_top = 1082.0
offset_right = 307.0
offset_bottom = 1143.0
text = "Timer"

[node name="home" type="Button" parent="."]
offset_left = 40.0
offset_top = 1082.0
offset_right = 158.0
offset_bottom = 1143.0
text = "Home"

[connection signal="pressed" from="store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="timer" to="." method="_on_timer_pressed"]
[connection signal="pressed" from="home" to="." method="_on_home_pressed"]
